# StoreOS

./: .git_release_msg.txt  .gitignore  ai-advisor-integration.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  auth.rs  finance.rs  health.rs  hr.rs  inventory.rs  mobile_scanner.html  mod.rs  product.rs  scanner_server.rs  settings.rs  sync.rs  window.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  seeder.rs
src-tauri/src/models/: inventory.rs  product.rs  settings.rs
src-tauri/src/repositories/: inventory.rs  mod.rs  product.rs  settings.rs
src/app/: globals.css  layout.tsx
src/app/ai-advisor/: page.tsx
src/app/dashboard/: page.tsx
src/app/finance/: page.tsx
src/app/hr/: page.tsx
src/app/inventory/: page.tsx
src/app/products/: page.tsx
src/app/purchases/: page.tsx
src/app/reports/: page.tsx
src/app/returns/: page.tsx
src/app/sales/: page.tsx
src/app/settings/: page.tsx
src/app/suppliers/: page.tsx
src/components/charts/: storeos-area-chart.tsx  storeos-bar-chart.tsx  storeos-donut-chart.tsx  storeos-gauge-chart.tsx
src/components/layout/: app-layout.tsx  page-container.tsx  sidebar.tsx  topbar.tsx
src/components/providers/: alert-provider.tsx  query-provider.tsx  theme-color-provider.tsx
src/components/ui/: animated-ai-input.tsx  command-palette.tsx  command.tsx  logo.tsx  (+2 more)
src/lib/: ipc.ts  printer.ts  syncEngine.ts
src/types/: storeos.ts
(+9 files in other folders)
